[package]
name = "myproject"
version = "0.1.0"
edition = "2018"

[dependencies]
skywalking = "0.6.0"
base64 = "0.13.0"
bytes = "1.2.1"
cfg-if = "1.0.0"
futures-core = "0.3.21"
futures-util = "0.3.21"
hostname = { version = "0.3.1", optional = true }
once_cell = "1.14.0"
parking_lot = "0.12.1"
portable-atomic = { version = "0.3.13", features = ["float"] }
prost = "0.11.0"
prost-derive = "0.11.0"
serde = { version = "1.0.143", features = ["derive"] }
systemstat = { version = "0.2.0", optional = true }
thiserror = "1.0.32"
tokio-io = "0.1.13"
tokio = { version = "1.20.1", features = ["parking_lot"] }
tokio-stream = { version = "0.1.9", features = ["time"] }
tonic = { version = "0.8.0", features = ["codegen"] }
tracing = "0.1.36"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
# add by longxi
anyhow = "1.0.32"
#hyper = { version = "1.0.0-rc.3", features = ["full"] }
hyper = "0.14.27"
#tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
http-body-util = "0.1.0-rc.2"
#bytes = "1"
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
http = "0.2"
axum="0.6.16"
#futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[build-dependencies]
protobuf-src = { version = "1.0.5", optional = true }
tonic-build = "0.8.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.9", features = ["net"] }